# CT_Syapse_project

./: .codeclimate.yml  .env.example  Dockerfile  Jenkinsfile  Jenkinsfile-SQA  MANIFEST.in  Pipfile  README.md  old_Dockerfile  runner  setup.cfg  setup.py
.circleci/: config.yml
config/: config.ini
qa_automation_drt_haw/: conftest.py  pytest.ini  qa_automation_drt_haw.py  settings.py
qa_automation_drt_haw/api/api_utils/: serviceApi.py
qa_automation_drt_haw/api/qa_test_data/: data_generator.py  urls.py
qa_automation_drt_haw/qa_utils/: backend_data.py  encrypt_decrypt.py  jwt_token.py  postgres_utils.py
qa_automation_drt_haw/test_data/: dev_tableau_cohort_builder.csv  fixture_data.json  sqa_tableau_bti.csv  sqa_tableau_cohort_builder.csv  sqa_tableau_nmr.csv  sqa_tableau_program_insights.csv
qa_automation_drt_haw/test_data/Data_vocab/: AgentDrug.csv  Best_response.csv  Distant_Metastatic_Sites.csv  Histology.csv  Local_treatment_outcome.csv  Oncotree.csv  PathStageGroup.csv  Primary_Site.csv  Recommendation_type.csv  Regimen.csv  Sample_type.csv  Toxi_category.csv  cM.csv  cN.csv  cT.csv  pM.csv  pN.csv  pT.csv
qa_automation_drt_haw/test_data/sample_files/: Sample_Document.docx  Sample_Presentation.pptx
qa_automation_drt_haw/ui/model/: admin.py  application.py  bti_page.py  care_dashboard.py  chronicle.py  chronicle_cancer_diagnosis_page.py  chronicle_genomic_alterations_page.py  chronicle_patient_status_page.py  chronicle_program_management_page.py  chronicle_surgery_and_radiation_page.py  chronicle_systemic_therapy_page.py  cohort_builder_page.py  mdx.py  (+10 more)
(+50 files in other folders)
