##
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = qa-automation-drt-haw
##
version = tbd
description = Automation Testing Framework for the HAW Team
long_description = Automation Testing Framework for the HAW Team
author = Syapse, Inc.
author_email = noreply@syapse.com
url = https://github.com/syapse/qa-automation-drt-haw
license = Proprietary
classifiers =
  Intended Audience :: Developers
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
[options]
zip_safe = False
include_package_data = True
setup_requires =
  setuptools-scm

# This is where we list the dependencies.
install_requires =
  Click>=6.0
  python-decouple
  envparse
  pytest-cov
  pytest-ordering
  unittest-xml-reporting
  pytest
  pytest-dependency
  pytest-testconfig
  python-dateutil
  pytest-xdist
  pytest-parallel
  allure-pytest
  allure-python-commons
  selenium
  pypom
  psycopg2-binary
  requests
  pyyaml
  lxml
  qa-automation-core==0.0.3rc1
  pytest-html
    
[mypy]
ignore_missing_imports = true

[pep8]
# Code Climate respects a pep8 section
max_line_length = 100

[flake8]
max_line_length = 100
